# list-data-structure-cpp

./: .gitignore  CMakeLists.txt  README.MD  list.h
.github/workflows/: test.action.yml
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  testing  testing[1]_include.cmake  testing[1]_tests.cmake
testing/: tests.cpp
testing/constructors/: constructor-by-iterator.test.cpp  constructor-by-movement.test.cpp  constructor.test.cpp  copy-constructor.test.cpp  copy.constructor.test.cpp  initializer-list.test.cpp  iterator.constructor.test.cpp  move.constructor.test.cpp
testing/helpers/: compare-list.helper.cpp  compare-list.helper.h  is-even.helper.h  resource.h  resource.helper.cpp  resource.helper.h
testing/helpers/include/: intlist.typealias.helper.h  is-even.helper.h  resource.helper.h
testing/helpers/source/: compare-list.helper.cpp  resource.helper.cpp
testing/iterators/: const_iterator.test.cpp  const_reverse_iterator.test.cpp  cpp.hint  iterator.test.cpp  iterators.test.cpp  iterators.test.dereference_no_copies.cpp  iterators.test.setup.h  post_increment_decrement.test.cpp  reverse_iterator.test.cpp
testing/iterators/setup/include/: iterators_test.fixture.h  iterators_test_setup.utils.h  iterators_test_traits.h
testing/iterators/setup/include/macros/: ASSERT_ITERATOR_STL_COMPAT.MACRO.H  DEREFERENCE.MACRO.H  INTEROP.MACRO.H
testing/methods/: assigment-operator.test.cpp  back.test.cpp  clear.test.cpp  contains.test.cpp  emplace-it.test.cpp  emplace.test.cpp  emplace_back.test.cpp  emplace_front.test.cpp  empty.test.cpp  equal-operator.test.cpp  equality-operator.test.cpp  find.test.cpp  foreach.test.cpp  front.test.cpp  insert-by-mov.test.cpp  insert-by-movement-it.test.cpp  insert-it.test.cpp  insert-move-semantics.test.cpp  insert.test.cpp  mov-assigment-operator.test.cpp  pop-it.test.cpp  pop_back.test.cpp  pop_front.test.cpp  push-back-move-semantics.test.cpp  push_back-by-movement.test.cpp  push_back.test.cpp  push_front-by-movement.test.cpp  push_front-move-semantics.test.cpp  push_front.test.cpp  remove_if.test.cpp  reverse.test.cpp  size.test.cpp  sort.test.cpp  splice.test.cpp  subscript-operator.cpp
testing/operators/: pos.operator.cpp
